--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,13 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #logger
 #logging.level.com.he.community=debug
 #logging.file.path=D:/java_project/MySpringboot/log/community.log
+
+# 9f908b79c9a0007e
+#MailProperties
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=1186105627@qq.com
+spring.mail.password=jsmfoccirfqghifc
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.ssl.enable=true
+
