--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <version>1.9.22</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.1.5.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
