--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,6 @@ spring.mail.password=jsmfoccirfqghifc
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.ssl.enable=true
 
+
+# community
+community.path.domain=http://localhost:8080
