--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.datasource.hikari.idle-timeout=30000
 
 #MybatisProperties
 mybatis.mapper-locations=classpath:mapper/*.xml
+# scan package for create aliases in DAO
 mybatis.type-aliases-package=com.he.community.entity
 mybatis.configuration.use-generated-keys=true
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -41,3 +42,9 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 # community
 community.path.domain=http://localhost:8080
+community.path.upload=d:/work/data/upload
+
+# redis
+spring.redis.databse=11
+spring.redis.host=localhost
+spring.redis.port=6379
