--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.servlet.context-path=/community
 server.port=8080
 
 #thymeleaf
-spring.thymeleaf.content-type= text/html 
-spring.thymeleaf.cache= false 
+spring.thymeleaf.servlet.content-type= text/html
+spring.thymeleaf.cache= false
 spring.thymeleaf.mode= LEGACYHTML5
 spring.thymeleaf.prefix=classpath:/templates/
 
@@ -48,3 +48,13 @@ community.path.upload=d:/work/data/upload
 spring.redis.databse=11
 spring.redis.host=localhost
 spring.redis.port=6379
+
+# KafkaProperties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
+
+
+
+
