--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,5 +56,48 @@ spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=3000
 
 
+# ElasticSearchProperties
+
+
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+# TaskSchedulingProperties
+spring.task.scheduling.pool.size=5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.scheduler.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.scheduler.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.stdJDBCDelegate
+spring.quartz.properties.org.quartz.scheduler.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.scheduler.threadPool.class=org.quartz.simple.SimpleThreadPool
+spring.quartz.properties.org.quartz.scheduler.threadPool.threadCount=5
+
+
+# wk
+wk.image.command=d:/wkHtmlToPDF/bin/wkhtmltoimage
+wk.image.storage=d:/work/data/wk-images
+
+# qiniu
+qiniu.key.access=ASPALQaZMQbkn5xFok1h7Z5E3Sq7tK28v5LiHm90
+qiniu.key.secret=KRcfRwHu5kThBY67Ph3pW2QiufKrfsR1QdL_HeS0
+qiniu.bucket.header.name=community-header-hechongwei
+qiniu.bucket.header.url=http://rjjcwo39f.hb-bkt.clouddn.com
+qiniu.bucket.share.name=community-share-hechongwei
+qiniu.bucket.share.url=http://rjjc97i5m.hb-bkt.clouddn.com
+
+# caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
+
+
+# actuator
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=info,caches
+
 
 
